--- a/RazorApp/Pages/index.cshtml
+++ b/RazorApp/Pages/index.cshtml
@@ -8,8 +8,22 @@
     <title>Razor Page</title>
   </head>
   <body>
-    <div>
-      
+
+    <ul>
+      <li>
+        <a href="~/">Home</a>
+      </li>
+
+      <li>
+        <a href="~/login">Login</a>
+      </li>
+
+      <li>
+        <a href="~/sobre">Sobre</a>
+      </li>
+    </ul>
+
+    <div>  
       <table>
         <thead>
           <tr>
