--- a/RazorApp/Pages/login.cshtml
+++ b/RazorApp/Pages/login.cshtml
@@ -1,13 +1,10 @@
 @page
 @model RazorApp.Pages.Login;
 
-<!DOCTYPE html>
-<html >
-  <head>
-    <title>Login</title>
-    <meta charset="UTF-8">
-  </head>
-  <body>
-  
-  </body>
-</html>
+@{
+  Layout = "Shared/_Layout";
+}
+
+<div>
+  <h1>Login</h1>
+</div>
