--- a/RazorApp/Pages/about.cshtml
+++ b/RazorApp/Pages/about.cshtml
@@ -1,14 +1,10 @@
 @page
 @model RazorApp.Pages.About;
 
-<!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <title>Sobre</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
-  <body>
-  
-  </body>
-</html>
+@{
+  Layout = "Shared/_Layout";
+}
+
+<div>
+  <h1>Sobre</h1>
+</div>
